# dataflow

./: .gitignore  CHANGELOG.md  README.md  environment.yml  pyproject.toml
dataflow/: __init__.py  clients.py  datascanner.py  del.csv  local_run.py  main.py  pagebuilder.py  varscanner.py
dataflow/common/: __init__.py  cli.py  filereader.py  logblocks.py  logger.py  times.py
dataflow/configs/: README.md  dirs.yaml  units.yaml
dataflow/configs/filegroups/: README.md
dataflow/configs/filegroups/ch-aws/processing/20_ec_fluxes/: AWS20-PROC-EDDYPRO-FULL-OUTPUT-CSV-L0-30MIN.yaml
dataflow/configs/filegroups/ch-aws/raw/10_meteo/: AWS10-RAW-TOA5-DAT-TBL1-1MIN-201701260236.yaml
dataflow/configs/filegroups/ch-aws/raw/11_meteo_valley/: AWS11-RAW-TOA5-DAT-TBL1-30MIN-201909190000.yaml
dataflow/configs/filegroups/ch-aws/raw/12_meteo_rainfall/: AWS12-RAW-TOA5-DAT-TBL1-10MIN-201909231530.yaml
dataflow/configs/filegroups/ch-aws/raw/13_meteo_pressure/: AWS13-RAW-CSV-1MIN-202001010100.yaml
dataflow/configs/filegroups/ch-aws/raw/15_meteo_snowheight/: AWS15-RAW-TOA5-DAT-1MIN-201911130000.yaml
dataflow/configs/filegroups/ch-dav/raw/10_meteo/: README.md  _TODO.txt  (+3 more)
dataflow/configs/filegroups/proc/: proc_meteoscreening.yaml
dataflow/configs/filegroups/processing/20_ec_fluxes/: PROC-EDDYPRO-FLUXNET-CSV-L0-30MIN.yaml
dataflow/datascanner/: __init__.py  datascanner.py
dataflow/db/: __init__.py  clients.py  dbclients.py  dbscanner.py  ingest.py
dataflow/filescanner/: __init__.py  filescanner.py
dataflow/filetypereader/: filetypereader.py  funcs.py  special_format_alternating.py  special_format_icosseq.py
dataflow/html_pagebuilder/templates/: _site_left_menu.html
dataflow/local_run/: calls.py  local_run.py
dataflow/modules/: __init__.py  clients.py  datascanner.py  logger.py  pagebuilder.py  varscanner.py
dataflow/pagebuilder/: __init__.py  pagebuilder.py
dataflow/pagebuilder/inc/: style.css
dataflow/pagebuilder/templates/: _site_base.html  site_from_df_html.html  site_index.html
dataflow/pkgs/: datascanner.py
dataflow/rawfuncs/: ch_cha.py  ch_fru.py  common.py
dataflow/varscanner/: __init__.py  varscanner.py
src/: cli.py
src/datascanner/: filescanner.py  varscanner.py
src/html_pagebuilder/templates/: _site_base.html  site_index.html  x-site_file_report_data.html
(+90 files in other folders)
