[tool.poetry]
name = "dataflow"
version = "0.9.0"
description = ""
authors = ["Lukas Hörtnagl <holukas@ethz.ch>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
PyYAML = "^6.0"
pandas = "^1.3.4"
Flask = "^2.0.2"
argparse = "^1.4.0"
influxdb-client = "^1.23.0"
single-source = "^0.2.0"
wcmatch = "^8.3"
dbc-influxdb = {url = "https://gitlab.ethz.ch/poet/dbc-influxdb/-/archive/v0.8.0/dbc-influxdb-v0.8.0.tar.gz"}

[tool.poetry.dev-dependencies]
#dbc-influxdb = { path = "../dbc-influxdb", develop = true }

[tool.poetry.scripts]
dataflow = "dataflow:main.main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
