[tool.poetry]
name = "dataflow"
version = "0.10.1"
description = ""
authors = ["Lukas Hörtnagl <31772692+holukas@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
pandas = "^2.1.0"
pyyaml = "^6.0.1"
flask = "^2.3.3"
argparse = "^1.4.0"
single-source = "^0.3.0"
wcmatch = "^8.5"
urllib3 = "1.26.18"
# deactivate next line during dev, activate only for production
dbc-influxdb = {url = "https://github.com/holukas/dbc-influxdb/archive/refs/tags/v0.10.1.tar.gz"}


[tool.poetry.dev-dependencies]
# activate next line only during dev, deactivate for production
#dbc-influxdb = { path = "../dbc-influxdb", develop = true }

[tool.poetry.scripts]
dataflow = "dataflow:main.main"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
